fix: quick and dirty fix for card stretching when remote user mutes/unmutes

--- a/client/src/styles/BaseCard.module.css
+++ b/client/src/styles/BaseCard.module.css
@@ -51,3 +51,8 @@
   max-height: 400px;
   overflow-y: auto;
 }
+
+.userCard {
+  width: 6rem;
+  justify-content: center;
+}
